test: use github-ci fix branch for workers dashboard URL
- Temporarily use rehan/fix/worker-url branch to test workers dashboard URL fix
- Should show workers dashboard URL in PR comments once deployed
- Will revert to main branch after fix is merged

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           repository: jalantechnologies/github-ci
           path: platform
-          ref: aa773401016455990fa5e50a2c95f3a8fa08702c
+          ref: rehan/fix/worker-url
 
       - name: Extract branch name
         id: extract_branch
