fix: address Copilot review feedback for Celery workers
- Add Celery signals (worker_ready, beat_init) to initialize WorkerRegistry
  in worker/beat processes, fixing task registration issue
- Make health check URL configurable via HEALTH_CHECK_URL env var for K8s
- Pin Celery dependencies to specific versions (celery==5.6.2, redis==7.1.0,
  celery-redbeat==2.3.3, flower==2.0.1)
- Fix Redis queue names in docs (celery -> default)
- Update getting-started.md to mention Flower dashboard
- Update github-ci ref to latest main commit

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           repository: jalantechnologies/github-ci
           path: platform
-          ref: rehan/fix/worker-url
+          ref: fad88356620fd16b87d7aef8fe909917eeaf7f19
 
       - name: Extract branch name
         id: extract_branch
