--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,10 @@ datadog-api-client = "==2.31.0"
 aiohttp = ">=3.13.3"
 protobuf = "==6.33.5"
 urllib3 = ">=2.6.3"
+celery = "==5.6.2"
+redis = "==7.1.0"
+celery-redbeat = "==2.3.3"
+flower = "==2.0.1"
 
 [dev-packages]
 black = "==24.8.0"
