chore(format): add CI enforcement for code formatting
- Add fmt:check, fmt:check:py, fmt:check:ts scripts to package.json
- Add run-format-check target to Makefile
- Add "Check code formatting" step to CI workflow after linting
- Add .venv to .prettierignore
- Apply formatters (autoflake, isort, black) across Python codebase

This enforces consistent formatting in CI and prevents formatting drift
in feature PRs.

Closes #595

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Run linting
         run: npm run lint
 
+      - name: Check code formatting
+        run: npm run fmt:check
+
   sonarqube:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
