--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build:assets": "cpx \"src/assets/**/*.*\" dist/assets",
     "build:frontend": "webpack --output-path dist/public --config src/apps/frontend/webpack.prod.js",
     "coverage": "make run-vulture",
-    "fmt": "concurrently npm:fmt:*",
+    "fmt": "concurrently npm:fmt:py npm:fmt:ts",
+    "fmt:check": "concurrently npm:fmt:check:*",
+    "fmt:check:py": "make run-format-check",
+    "fmt:check:ts": "prettier --check \"**/*.{js,ts,tsx}\" --ignore-path .prettierignore",
     "fmt:py": "make run-format && make run-format-tests",
     "fmt:ts": "prettier --write \"**/*.{js,ts,tsx}\" --ignore-path .prettierignore",
     "lint": "concurrently -m 1 --kill-others-on-fail 'npm:lint:*(!fix)'",
