--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -67,9 +67,9 @@ spec:
             - name: WEB_APP_HOST
               value: https://$KUBE_INGRESS_HOSTNAME
             - name: CELERY_BROKER_URL
-              value: "redis://$KUBE_APP-redis:6379/0"
+              value: 'redis://$KUBE_APP-redis:6379/0'
             - name: CELERY_RESULT_BACKEND
-              value: "redis://$KUBE_APP-redis:6379/0"
+              value: 'redis://$KUBE_APP-redis:6379/0'
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
@@ -106,4 +106,3 @@ spec:
         - name: secret-ref
           secret:
             secretName: $DOPPLER_MANAGED_SECRET_NAME
-
