--- a/config/development.yml
+++ b/config/development.yml
@@ -11,8 +11,6 @@ celery:
 worker:
   health_check_url: 'http://localhost:8080/api/'
 
-
-
 sms:
   enabled: false
 
@@ -28,9 +26,9 @@ account:
   enable_bootstrap_tasks: true
   create_test_user_account: true
   test_user:
-    first_name: "Dev"
-    last_name: "User"
-    username: "dev@example.com"
-    password: "devpassword"
+    first_name: 'Dev'
+    last_name: 'User'
+    username: 'dev@example.com'
+    password: 'devpassword'
 
 BOOTSTRAP_APP: true
