--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,13 @@ name: ci
 
 on:
   pull_request:
-    types: [ opened, synchronize, reopened, ready_for_review ]
+    types: [opened, synchronize, reopened, ready_for_review]
 
 # Ensures CI workflow has minimal permissions for security
 permissions:
-  contents: read        # Read-only access to repo contents for safer workflows
-  pull-requests: write  # Allow workflow to comment on, label, and update pull request as part of automation
-  id-token: write       # Allow OIDC tokens for secure cloud authentication
+  contents: read # Read-only access to repo contents for safer workflows
+  pull-requests: write # Allow workflow to comment on, label, and update pull request as part of automation
+  id-token: write # Allow OIDC tokens for secure cloud authentication
 
 jobs:
   lint:
@@ -40,6 +40,9 @@ jobs:
 
       - name: Run linting
         run: npm run lint
+
+      - name: Check code formatting
+        run: npm run fmt:check
 
   sonarqube:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
@@ -75,7 +78,7 @@ jobs:
           branch_base: main
           pull_request_number: ${{ github.event.number }}
 
-  scan: 
+  scan:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
@@ -124,10 +127,10 @@ jobs:
           output: 'trivy-report.md'
           severity: 'HIGH,CRITICAL'
           ignore-unfixed: true
-          trivyignores: ".trivyignore"
+          trivyignores: '.trivyignore'
           exit-code: 1
           cache-dir: .trivy
-      
+
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@71345be0265236311c031f5c7866368bd1eff043
         if: steps.trivy.outcome == 'failure'
@@ -163,9 +166,9 @@ jobs:
             mkdir -p "iac_changed_files/lib/kube/core/"
             cp "lib/kube/core/network-policy.yaml" "iac_changed_files/lib/kube/core/"
           fi
-          
+
           echo "FILTERED_FILES=$FILTERED_FILES" >> $GITHUB_OUTPUT
-      
+
       - name: Run Trivy scan on IaC
         if: ${{ steps.iac_changes.outputs.FILTERED_FILES != '' }}
         id: trivy_iac
@@ -180,7 +183,7 @@ jobs:
           output: 'trivy-iac-report.md'
           severity: 'HIGH,CRITICAL'
           ignore-unfixed: true
-          trivyignores: ".trivyignore"
+          trivyignores: '.trivyignore'
           exit-code: 1
           cache-dir: .trivy
 
@@ -191,7 +194,7 @@ jobs:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body-path: trivy-iac-report.md
-      
+
       - name: Run Checkov action
         id: checkov
         if: ${{ steps.iac_changes.outputs.FILTERED_FILES != '' }}
@@ -228,7 +231,7 @@ jobs:
           output: 'trivy-docker-report.md'
           severity: 'HIGH,CRITICAL'
           ignore-unfixed: true
-          trivyignores: ".trivyignore"
+          trivyignores: '.trivyignore'
           exit-code: 1
           cache-dir: .trivy
 
@@ -238,7 +241,7 @@ jobs:
           # Count how many vulnerabilities are listed in the markdown
           COUNT=$(grep -c "CVE-" trivy-docker-report.md || true)
           echo "vuln_count=$COUNT" >> $GITHUB_OUTPUT
-          
+
       - name: Comment PR with audit results
         uses: peter-evans/create-or-update-comment@71345be0265236311c031f5c7866368bd1eff043
         if: steps.trivy_docker.outcome == 'failure' && hashFiles('trivy-docker-report.md') != '' && steps.vuln_check.outputs.vuln_count != '0'
@@ -246,20 +249,20 @@ jobs:
           token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body-path: trivy-docker-report.md
-      
+
       - name: Fail job if Trivy found issues
         if: steps.trivy.outcome == 'failure' || steps.trivy_docker.outcome == 'failure' || steps.checkov.outcome == 'failure'
         run: |
           echo "❌ Trivy found vulnerabilities — failing the job."
           exit 1
-          
+
   test:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
-      
+
       - name: Prepare coverage directory
         run: mkdir -p output
 
