--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "fmt": "concurrently npm:fmt:*",
     "fmt:py": "make run-format && make run-format-tests",
     "fmt:ts": "prettier --write \"**/*.{js,ts,tsx}\" --ignore-path .prettierignore",
+    "fmt:check": "concurrently -m 1 --kill-others-on-fail npm:fmt:check:*",
+    "fmt:check:py": "make run-format-check",
+    "fmt:check:ts": "prettier --check \"**/*.{js,ts,tsx,yml,yaml,md}\" --ignore-path .prettierignore",
     "lint": "concurrently -m 1 --kill-others-on-fail 'npm:lint:*(!fix)'",
     "lint:ts": "eslint .",
     "lint:md": "remark .",
