fix: skip CD workflows for version bump commits

--- a/.github/workflows/permanent_preview.yml
+++ b/.github/workflows/permanent_preview.yml
@@ -12,6 +12,7 @@ permissions:
 
 jobs:
   deploy:
+    if: github.event.head_commit.author.name != 'github-actions[bot]'
     runs-on: ubuntu-latest
     concurrency:
       group: cd-permanent-preview
